--- a/OfficeDevPnP.PartnerPack.SiteProvisioning/OfficeDevPnP.PartnerPack.CheckAdminsJob/OfficeDevPnP.PartnerPack.CheckAdminsJob.csproj
+++ b/OfficeDevPnP.PartnerPack.SiteProvisioning/OfficeDevPnP.PartnerPack.CheckAdminsJob/OfficeDevPnP.PartnerPack.CheckAdminsJob.csproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\demro1pnppartnerprovisioner - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\erwinmcmtest.pubxml" />
     <None Include="Properties\webjob-publish-settings.json" />
   </ItemGroup>
