--- a/OfficeDevPnP.PartnerPack.SiteProvisioning/OfficeDevPnP.PartnerPack.ContinousJob/OfficeDevPnP.PartnerPack.ContinousJob.csproj
+++ b/OfficeDevPnP.PartnerPack.SiteProvisioning/OfficeDevPnP.PartnerPack.ContinousJob/OfficeDevPnP.PartnerPack.ContinousJob.csproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\demro1pnppartnerprovisioner - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\pnp-partner-pack.pubxml" />
     <None Include="Properties\webjob-publish-settings.json" />
   </ItemGroup>
